build-deploy/kubernetes/mongo-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo 
spec:
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo
  template:
    metadata:      
      labels:
        app: mongo
    spec:
      containers:
        - image: 'mongo:4.4'
          imagePullPolicy: IfNotPresent          
          name: mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongo
  volumeClaimTemplates:
    - metadata:        
        name: mongo
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
