build-deploy/kubernetes/gaf-service.yaml
kind: Service
apiVersion: v1
metadata:  
  name: gaf
spec:
  ports:    
    - name: gaf
      protocol: TCP
      port: 8080
      targetPort: 8080    
  selector:
    app: gaf
