build-deploy/kubernetes/mongo-headless-service.yaml
kind: Service
apiVersion: v1
metadata:  
  name: mongo
spec:
  ports:    
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017    
  selector:
    app: mongo
  clusterIP: None  
  type: ClusterIP
  sessionAffinity: None
