build-deploy/kubernetes/gaf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaf
spec:
  rules:
    - host: gaf.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaf
                port:
                  number: 8080
